# RappelzRDBTool

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml  deploy.sh
Base/: CMakeLists.txt  CSVSource.cpp  CSVSource.h  CharsetConverter.cpp  DataType.h  Database.cpp  Database.h  DebugOutput.h  ExportDLL.h  ExternDescriptedDatabase.cpp  ExternDescriptedDatabase.h  ICharsetConverter.cpp  ICharsetConverter.h  IDataSource.cpp  IDataSource.h  IDatabase.h  IDatabaseDescription.cpp  IDatabaseDescription.h  IObject.cpp  IRowManipulator.cpp  IRowManipulator.h  LuaDescriptedDatabase.cpp  LuaDescriptedDatabase.h  RDBSkillTreeSource.cpp  RDBSkillTreeSource.h  RDBSource.cpp  RDBSource.h  RDUSource.cpp  RDUSource.h  RowManipulator.cpp  RowManipulator.h  SQLFileSource.cpp  SQLFileSource.h  SQLLanguage.h  SQLPostgres.cpp  SQLServer.cpp  SQLServer.h  SQLSource.cpp  SQLSource.h
Base/include/: DataType.h  ExportDLL.h  Guid.h  ICharsetConverter.h  IDataSource.h  IDatabase.h  IDatabaseDescription.h  ILog.h  IObject.h  IRowManipulator.h  SpecialDatabaseRules.h
Base/libiconv/: CMakeLists.txt
Base/libiconv/include/: config.h
Base/libiconv/src/: CMakeLists.txt  utf16.h
Base/src/: CSVSource.cpp  CSVSource.h  CharsetConverter.cpp  CharsetConverter.h  Database.cpp  Database.h  DebugOutput.h  ExternDescriptedDatabase.cpp  ExternDescriptedDatabase.h  ICharsetConverter.cpp  IDataSource.cpp  IDatabase.cpp  IDatabaseDescription.cpp  ILog.cpp  IRowManipulator.cpp  Log.cpp  Log.h  LuaDescriptedDatabase.cpp  LuaDescriptedDatabase.h  RDBSkillTreeSource.cpp  RDBSkillTreeSource.h  RDBSource.cpp  RDBSource.h  RDUSource.cpp  RDUSource.h  RowManipulator.cpp  RowManipulator.h  SQLFileSource.cpp  SQLFileSource.h  SQLLanguage.h  SQLPostgres.cpp  SQLPostgres.h  SQLServer.cpp  SQLServer.h  SQLSource.cpp  SQLSource.h
Databases/: Animation81Database.cpp  AuctionCategory81Database.cpp  AuctionCategoryDatabase.cpp  BanWord81Database.cpp  BanWordDatabase.cpp  BasicStat81Database.cpp  BasicStatDatabase.cpp  BattleArena81Database.cpp  BattleArenaDatabase.cpp  CMakeLists.txt  CharacterMotion81Database.cpp  CharacterMotionDatabase.cpp  CreatureEnhance81Database.cpp  CreatureEnhanceDatabase.cpp  CreatureFarm81Database.cpp  CreatureFarmDatabase.cpp  Decompose81Database.cpp  DefaultModelRes81Database.cpp  DefaultModelResDatabase.cpp  DefaultTexture81Database.cpp  DefaultTextureDatabase.cpp  DefaultTextureIcon81Database.cpp  DefaultTextureIconDatabase.cpp  DropGroup81Database.cpp  DropGroupDatabase.cpp  Dungeon81Database.cpp  DungeonDatabase.cpp  Effect81Database.cpp  EffectDatabase.cpp  Enhance81Database.cpp  EnhanceDatabase.cpp  EnhanceEffect91Database.cpp  EnhanceFx81Database.cpp  EnhanceFxDatabase.cpp  Exp52Database.cpp  Exp81Database.cpp  Exp91Database.cpp  ExpDatabase.cpp  FieldProp81Database.cpp  FieldPropDatabase.cpp  (+111 more)
Databases/lua/: .luacheckrc  Animation81Database.lua  AuctionCategory81Database.lua  BanWord81Database.lua  BasicStat81Database.lua  BattleArena81Database.lua  CharacterMotion81Database.lua  CreatureEnhance81Database.lua  CreatureFarm81Database.lua  Decompose81Database.lua  DefaultModelRes81Database.lua  DefaultTexture81Database.lua  DefaultTextureIcon81Database.lua  DropGroup81Database.lua  Dungeon81Database.lua  Effect81Database.lua  Enhance81Database.lua  EnhanceEffect91Database.lua  EnhanceFx81Database.lua  Exp52Database.lua  Exp81Database.lua  Exp91Database.lua  FieldProp81Database.lua  FieldTypeMaterial81Database.lua  GroundMaterial81Database.lua  Huntaholic81Database.lua  Item21Database.lua  Item521Database.lua  Item522Database.lua  Item71Database.lua  Item81Database.lua  Item83Database.lua  Item91Database.lua  Item94Database.lua  ItemEffect81Database.lua  ItemName81Database.lua  ItemRef94Database.lua  Job81Database.lua  Job91Database.lua  LowQualityWater81Database.lua  (+52 more)
cl/: CMakeLists.txt  CmakeLists.txt  RappelzRDBDbSource.cpp  RappelzRDBToolCl.cpp
gui/: .gitignore  CMakeLists.txt  DatabaseDescManageDialog.cpp  DatabaseDescManageDialog.h  DatabaseDescManageDialog.ui  DatabaseDescriptionListModel.cpp  DatabaseDescriptionListModel.h  DatabaseTableModel.cpp  DatabaseTableModel.h  DatabaseView.cpp  DatabaseView.h  DatabaseView.ui  FileDialog.cpp  FileDialog.h  FileToRenameListModel.cpp  FileToRenameListModel.h  HashConverterDialog.cpp  HashConverterDialog.h  HashConverterDialog.ui  HashToName.c  HashToName.h  LogWindow.cpp  LogWindow.h  LogWindow.ui  Maingui.cpp  Maingui.h  Maingui.ui  NameToHash.c  NameToHash.h  OpenSaveSource.cpp  OpenSaveSource.h  PersistentData.cpp  PersistentData.h  RappelzRDBToolQt.fr_FR.ts  RappelzRDBToolQt.pro  Settings.cpp  Settings.h  SqlConfigDialog.cpp  SqlConfigDialog.h  SqlConfigDialog.ui  (+7 more)
libiconv/include/: iconv.h
libiconv/src/: CMakeLists.txt  aliases.h  localcharset.c
lua/: CMakeLists.txt
lua/src/: luaconf.h
